--- a/furniture_Sales_Management/src/view/Register.form
+++ b/furniture_Sales_Management/src/view/Register.form
@@ -106,6 +106,9 @@
     <Component class="javax.swing.JSeparator" name="divider">
     </Component>
     <Container class="javax.swing.JPanel" name="name">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -167,6 +170,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="email">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -225,6 +231,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="date">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -261,6 +270,7 @@
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="txtDate">
           <Properties>
+            <Property name="opaque" type="boolean" value="false"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[80, 26]"/>
             </Property>
@@ -269,6 +279,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="gender">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -332,6 +345,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="username">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -390,6 +406,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="Role">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -467,6 +486,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="password">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -511,6 +533,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="retypePassword">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -553,6 +578,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="address">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -616,6 +644,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="buttons">
+      <Properties>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
