--- a/furniture_Sales_Management/src/view/MainPage.form
+++ b/furniture_Sales_Management/src/view/MainPage.form
@@ -80,7 +80,7 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jobMainbt1" max="32767" attributes="0"/>
+                              <Component id="jobMainbtn1" max="32767" attributes="0"/>
                               <Component id="jobMainbtn2" alignment="0" max="32767" attributes="0"/>
                               <Component id="jobMainbtn3" alignment="0" max="32767" attributes="0"/>
                               <Component id="jobMainbtn4" alignment="0" max="32767" attributes="0"/>
@@ -108,7 +108,7 @@
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="jobMainbt1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jobMainbtn1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                           <Component id="jobMainbtn2" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
@@ -144,7 +144,7 @@
             <Property name="text" type="java.lang.String" value="Welcome, "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jobMainbt1">
+        <Component class="javax.swing.JButton" name="jobMainbtn1">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Century Gothic" size="14" style="0"/>
@@ -155,7 +155,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jobMainbt1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jobMainbtn1ActionPerformed"/>
           </Events>
         </Component>
         <Container class="javax.swing.JTabbedPane" name="Tabs">
