--- a/furniture_Sales_Management/src/view/ModifySalesOrder.form
+++ b/furniture_Sales_Management/src/view/ModifySalesOrder.form
@@ -163,17 +163,23 @@
         <Component class="javax.swing.JTable" name="tblQuotation">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="0">
+              <Table columnCount="7" rowCount="0">
                 <Column editable="true" title="ORDER ID" type="java.lang.Object"/>
                 <Column editable="true" title="FURNITURE ID" type="java.lang.Object"/>
                 <Column editable="true" title="QUANTITY" type="java.lang.Object"/>
                 <Column editable="true" title="UNIT PRICE" type="java.lang.Object"/>
                 <Column editable="true" title="TOTAL COST" type="java.lang.Object"/>
                 <Column editable="true" title="CUSTOMER ID" type="java.lang.Object"/>
+                <Column editable="true" title="STATUS" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
